Co-authored-by: ZNicolosi <ZNicolosi@users.noreply.github.com>

--- a/output/story.html
+++ b/output/story.html
@@ -147,6 +147,10 @@ If a player picks the &quot;correct&quot; fortune, there is a chance that you ca
 [[Lie 1|First Lie 1]]
 [[Lie 2|First Lie 2]]</tw-passagedata><tw-passagedata pid="6" name="Correct Reading 1" tags="" position="725,100" size="100,100">The player choose the correct reading that will affect the story later on.
 Assign a variable that tracks this $LoversVariable = True
+&lt;&lt;set $loversVariable to true&gt;&gt;
+&lt;&lt;if $loversVariable is true&gt;&gt;If-statement test
+&lt;&lt;else&gt;&gt;Failed conditional
+&lt;&lt;/if&gt;&gt;
 [[Proceed with Story|Second Tarot Reading]]</tw-passagedata><tw-passagedata pid="7" name="First Lie 1" tags="" position="850,100" size="100,100">This options will trigger a different dialouge tree and not affect the story that much
 [[Proceed with Story|Second Tarot Reading]]</tw-passagedata><tw-passagedata pid="8" name="First Lie 2" tags="" position="975,100" size="100,100">This options will trigger a different dialouge tree and not affect the story that much
 [[Proceed with Story|Second Tarot Reading]]</tw-passagedata><tw-passagedata pid="9" name="Second Tarot Reading" tags="" position="1100,100" size="100,100">The second customer has [[anger management issues.|Anecdote]]</tw-passagedata><tw-passagedata pid="10" name="Anecdote" tags="" position="1225,100" size="100,100">You remeber seeing this customer at the park throwing rocks at wildlife there.
