--- a/output/story.html
+++ b/output/story.html
@@ -219,7 +219,13 @@ set in stone and fate exists.
 &lt;&lt;set $chariotListReversed = [&quot;Carelessness&quot;, &quot;Arrogance&quot;, &quot;Wanderlust&quot;]&gt;&gt;
 
 &lt;&lt;set $foolList = [&quot;New Beginning&quot;, &quot;Innocence&quot;, &quot;Spontaneity&quot;]&gt;&gt;
-&lt;&lt;set $foolListReversed = [&quot;Recklessness&quot;, &quot;Fearlessness&quot;, &quot;Risks&quot;]&gt;&gt;</tw-passagedata><tw-passagedata pid="9" name="Start" tags="" position="1100,100" size="100,100">&lt;h1 class=&quot;title&quot;&gt;XIII&lt;/h1&gt;
+&lt;&lt;set $foolListReversed = [&quot;Recklessness&quot;, &quot;Fearlessness&quot;, &quot;Risks&quot;]&gt;&gt;
+
+&lt;&lt;set $gift to false&gt;&gt;
+&lt;&lt;set $knife to false&gt;&gt;
+
+&lt;&lt;set $petList = [&quot;dog&quot;, &quot;cat&quot;]&gt;&gt;
+&lt;&lt;set $pet = $petList.pluck()&gt;&gt;</tw-passagedata><tw-passagedata pid="9" name="Start" tags="" position="1100,100" size="100,100">&lt;h1 class=&quot;title&quot;&gt;XIII&lt;/h1&gt;
 
 Before starting the game, please enter the name of an important character:
 &lt;br&gt;
@@ -410,37 +416,59 @@ You and $friendFirstName arrive at your apartment that was only a few minutes fr
 &quot;Sure&quot; $friendFirstName seems a little hurt you said this
 It&#39;s not like $friendFirstName ghosted you for a couple of years, you decide to ignore it.
 As soon as you enter your home you hear a little yapping at your feet.
-It&#39;s Luma your pet chihuaha, the whole point for making this stop.
-&quot;Did you miss me?&quot;
-Luma frantically jumps at your legs clearly excited about something.
-You proceed to grab some dog food and fill Luma&#39;s dog bowl.
-Luma wastes no time and before you even pull away is already at the bowl devouring the food you had poured her.
-You decide to [[grab some things|Gift Knife]] before you head out with $friendFirstName.</tw-passagedata><tw-passagedata pid="33" name="Gift Knife" tags="" position="350,475" size="100,100">[[Grab gift|Heading Out]]
-[[Grab pocket knife|Heading Out]]</tw-passagedata><tw-passagedata pid="34" name="Heading Out" tags="" position="475,475" size="100,100">As you are heading out Luma approaches you clearly [[expecting something|Dog Pat]]
+&lt;&lt;if $pet == &quot;dog&quot;&gt;&gt;
+	It&#39;s Luma your pet chihuaha, the whole point for making this stop.
+	&quot;Did you miss me?&quot;
+	Luma frantically jumps at your legs clearly excited about something.
+	You proceed to grab some dog food and fill Luma&#39;s dog bowl.
+	Luma wastes no time and before you even pull away is already at the bowl devouring the food you had poured her.
+	You decide to [[grab some things|Gift Knife]] before you head out with $friendFirstName.
+&lt;&lt;elseif $pet == &quot;cat&quot;&gt;&gt;
+	It&#39;s Luma your pet cat, the whole point for making this stop.
+	&quot;Did you miss me?&quot;
+	Luma rubs up against your legs purring clearly excited about something.
+	You proceed to grab some cat food and fill Luma&#39;s cat bowl.
+	Luma wastes no time and before you even pull away is already at the bowl devouring the food you had poured her.
+	You decide to [[grab some things|Gift Knife]] before you head out with $friendFirstName.
+&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="33" name="Gift Knife" tags="" position="350,475" size="100,100">[[Grab gift|Grab Gift]]
+[[Grab pocket knife|Grab Knife]]</tw-passagedata><tw-passagedata pid="34" name="Grab Gift" tags="" position="475,475" size="100,100">&lt;&lt;set $gift to true&gt;&gt;
+You decide to grab the gift, who knows it might come in handy later.
+[[Next|Heading Out]]</tw-passagedata><tw-passagedata pid="35" name="Grab Knife" tags="" position="600,475" size="100,100">&lt;&lt;set $knife to true&gt;&gt;
+You decide to grab the pocket knife, who knows it might come in handy later.
+[[Next|Heading Out]]</tw-passagedata><tw-passagedata pid="36" name="Heading Out" tags="" position="725,475" size="100,100">&lt;&lt;if $pet == &quot;dog&quot;&gt;&gt;
+	As you are heading out Luma approaches you clearly [[expecting something|Dog Pat]]
+	&lt;img src=&quot;media/dogStare.gif&quot; alt=&quot;dog stare&quot; style=&quot;width: 30%;&quot;&gt;
+&lt;&lt;elseif $pet == &quot;cat&quot;&gt;&gt;
+As you are heading out Luma approaches you clearly [[expecting something|Cat Pat]]
+	&lt;img src=&quot;media/catStare.gif&quot; alt=&quot;cat stare&quot; style=&quot;width: 30%;&quot;&gt;
+&lt;&lt;/if&gt;&gt;
 After tidying up a bit, you grab a coat and head to the door.
 $friendFirstName is leaning next to your door waiting for you outside.
-&quot;Well I&#39;m ready to go&quot; you say
-&quot;Great [[where we heading?|Park Bar Decision]]&quot;</tw-passagedata><tw-passagedata pid="35" name="Dog Pat" tags="" position="600,475" size="100,100">You know exactly what Luma wants
+&quot;Well I&#39;m ready to go.&quot; you say
+&quot;Great [[where we heading?|Park Bar Decision]]&quot;</tw-passagedata><tw-passagedata pid="37" name="Dog Pat" tags="" position="850,475" size="100,100">You know exactly what Luma wants
 You pet her, Luma clearly loves this letting out a happy noise
 &lt;img src=&quot;media/dog.gif&quot; alt=&quot;dog being pet&quot; style=&quot;width: 30%;&quot;&gt;
-[[Go Back|Heading Out]]</tw-passagedata><tw-passagedata pid="36" name="Park Bar Decision" tags="" position="725,475" size="100,100">Decide to go hangout with friend at...
+[[Go Back|Heading Out]]</tw-passagedata><tw-passagedata pid="38" name="Cat Pat" tags="" position="975,475" size="100,100">You know exactly what Luma wants
+You pet her, Luma clearly loves this purring happily
+&lt;img src=&quot;media/cat.gif&quot; alt=&quot;cat being pet&quot; style=&quot;width: 30%;&quot;&gt;
+[[Go Back|Heading Out]]</tw-passagedata><tw-passagedata pid="39" name="Park Bar Decision" tags="" position="1100,475" size="100,100">Decide to go hangout with friend at...
 [[Park|Park]]
-[[Bar|Bar]]</tw-passagedata><tw-passagedata pid="37" name="Stalk" tags="" position="850,475" size="100,100">As soon as $friendFirstName walks through the door you rush to grab your things.
+[[Bar|Bar]]</tw-passagedata><tw-passagedata pid="40" name="Stalk" tags="" position="1225,475" size="100,100">As soon as $friendFirstName walks through the door you rush to grab your things.
 You grab your [[sunglasses and a hat|Gear]]. You quickly follow out the door locking up for the day.
 Quickly looking around you spot your friend about 100 feet up the road and you quickly follow them.
 After following them for about 5 minutes you [[trip on your shoe lace|Trip]].
 [[Tie your shoes|Tie Shoes]]
-[[Live life on the edge| Keep Walking]]</tw-passagedata><tw-passagedata pid="38" name="Gear" tags="" position="975,475" size="100,100">Spy gear obvioulsy. No one will be able to recognize you.
+[[Live life on the edge| Keep Walking]]</tw-passagedata><tw-passagedata pid="41" name="Gear" tags="" position="100,600" size="100,100">Spy gear obvioulsy. No one will be able to recognize you.
 
-[[Back|Stalk]]</tw-passagedata><tw-passagedata pid="39" name="Trip" tags="" position="1100,475" size="100,100">You trip on your shoe lace and scrape your knee.
+[[Back|Stalk]]</tw-passagedata><tw-passagedata pid="42" name="Trip" tags="" position="225,600" size="100,100">You trip on your shoe lace and scrape your knee.
 It was kind of embarrassing for you.
 
-[[Back|Stalk]]</tw-passagedata><tw-passagedata pid="40" name="Tie Shoes" tags="" position="1225,475" size="100,100">&lt;!-- Add death how ever we want to do that. --&gt;</tw-passagedata><tw-passagedata pid="41" name="Keep Walking" tags="" position="100,600" size="100,100">You decide that life is more fun living on the edge so who needs to tie their shoes.
+[[Back|Stalk]]</tw-passagedata><tw-passagedata pid="43" name="Tie Shoes" tags="" position="350,600" size="100,100">&lt;!-- Add death how ever we want to do that. --&gt;</tw-passagedata><tw-passagedata pid="44" name="Keep Walking" tags="" position="475,600" size="100,100">You decide that life is more fun living on the edge so who needs to tie their shoes.
 You stand up after tripping and see your friend being stupid and not looking both ways.
 A car is rushing down the road and your friend is in its path.
 You scramble to think of what to do...
 [[OMG you forogt to tie your shoes| Tie Shoes]]
-[[]]</tw-passagedata><tw-passagedata pid="42" name="Tarot Minigame Customer 1" tags="" position="225,600" size="100,100">You begin your reading of the customer...
+[[]]</tw-passagedata><tw-passagedata pid="45" name="Tarot Minigame Customer 1" tags="" position="600,600" size="100,100">You begin your reading of the customer...
 
 You draw the $cardDrawn1 tarot card in the &lt;u&gt;upright&lt;/u&gt; position!
 
@@ -474,13 +502,13 @@ You draw the $cardDrawn1 tarot card in the &lt;u&gt;upright&lt;/u&gt; position!
     [[&quot;I draw the Tower card, this could signify &quot; + $towerList.pluck() + &quot;.&quot;|Correct]]
     [[&quot;I draw the Tower card, this could signify &quot; + $towerListReversed.pluck() + &quot;.&quot;|Partially]]
     [[&quot;I draw the Tower card, this could signify &quot; + $wrongList.pluck() + &quot;.&quot;|Incorrect]]
-&lt;&lt;/if&gt;&gt;\</tw-passagedata><tw-passagedata pid="43" name="Correct" tags="" position="350,600" size="100,100">&lt;&lt;set $lovers to true&gt;&gt;
+&lt;&lt;/if&gt;&gt;\</tw-passagedata><tw-passagedata pid="46" name="Correct" tags="" position="725,600" size="100,100">&lt;&lt;set $lovers to true&gt;&gt;
 &quot;I see happiness and romance in your future, all you need is patience.
 Wait a bit. Who knows how long? It might be tomorrow, it might be a year.
 Just know that soon, your soulmate will surely come to you.&quot;
 
 &quot;Wow, you really think so?&quot; she bounds. &quot;Thank you!&quot;
-[[Next|Second Tarot Reading]]</tw-passagedata><tw-passagedata pid="44" name="Partially" tags="" position="475,600" size="100,100">&quot;Oh wow,&quot; you say, on a whim. &quot;These cards being pulled specifically are rare. Love for
+[[Next|Second Tarot Reading]]</tw-passagedata><tw-passagedata pid="47" name="Partially" tags="" position="850,600" size="100,100">&quot;Oh wow,&quot; you say, on a whim. &quot;These cards being pulled specifically are rare. Love for
 you is very fleeting. Within the next few days you must confess your love to the
 person you love most, or you&#39;ll stay single for the rest of your life!&quot;
 
@@ -496,13 +524,13 @@ you is glad she finally has the drive to ask that person out. Then you remember
 you lied to her about the fortune.
 
 Ah, to hell with it. It&#39;s not your problem anyway. &lt;&lt;set $passion to true&gt;&gt;
-[[Next|Second Tarot Reading]]</tw-passagedata><tw-passagedata pid="45" name="Incorrect" tags="" position="600,600" size="100,100">&quot;Hmmm...&quot; you say, &quot;That card usually doesn&#39;t bode well romantically. It might signify a lack of love in the near future, maybe.
+[[Next|Second Tarot Reading]]</tw-passagedata><tw-passagedata pid="48" name="Incorrect" tags="" position="975,600" size="100,100">&quot;Hmmm...&quot; you say, &quot;That card usually doesn&#39;t bode well romantically. It might signify a lack of love in the near future, maybe.
 It&#39;s hard to tell.&quot;
 
 &quot;Oh... really?&quot; the customer says. &quot;That sucks.&quot;
 
 She walks away.
-[[Next|Second Tarot Reading]]</tw-passagedata><tw-passagedata pid="46" name="Tarot Minigame Customer 2" tags="" position="725,600" size="100,100">You begin your reading of the customer...
+[[Next|Second Tarot Reading]]</tw-passagedata><tw-passagedata pid="49" name="Tarot Minigame Customer 2" tags="" position="1100,600" size="100,100">You begin your reading of the customer...
 
 You draw the $cardDrawn2 tarot card in the &lt;u&gt;upright&lt;/u&gt; position!
 
@@ -536,7 +564,7 @@ You draw the $cardDrawn2 tarot card in the &lt;u&gt;upright&lt;/u&gt; position!
     [[&quot;I draw the Chariot card, this could signify &quot; + $chariotList.pluck() + &quot;.&quot;|Correct 2]]
     [[&quot;I draw the Chariot card, this could signify &quot; + $chariotListReversed.pluck() + &quot;.&quot;|Partially 2]]
     [[&quot;I draw the Chariot card, this could signify &quot; + $wrongList.pluck() + &quot;.&quot;|Incorrect 2]]
-&lt;&lt;/if&gt;&gt;\</tw-passagedata><tw-passagedata pid="47" name="Correct 2" tags="" position="850,600" size="100,100">&lt;&lt;set $anger to true&gt;&gt;
+&lt;&lt;/if&gt;&gt;\</tw-passagedata><tw-passagedata pid="50" name="Correct 2" tags="" position="1225,600" size="100,100">&lt;&lt;set $anger to true&gt;&gt;
 He scoffs. You continue.
 
 &quot;Big things are coming your way. BIIIIIG changes. It&#39;s not very clear
@@ -550,7 +578,7 @@ ear? I&#39;m FINE just the way I am. It&#39;s everybody else that&#39;s the prob
 the SYSTEM. It&#39;s my WIFE!&quot;
 
 He storms off clearly not ready to accept the truth just yet, maybe he just needs to process it for a while.
-[[Proceed with Story|Friend Encounter]]</tw-passagedata><tw-passagedata pid="48" name="Partially 2" tags="" position="975,600" size="100,100">&quot;This combination of cards... I think in your case it&#39;s best we take them a
+[[Proceed with Story|Friend Encounter]]</tw-passagedata><tw-passagedata pid="51" name="Partially 2" tags="" position="100,725" size="100,100">&quot;This combination of cards... I think in your case it&#39;s best we take them a
 bit more on the nose. Watch more Judge Judy. Look at the moon more. Hey,
 maybe even study up on some atlases. Just you wait. Good things will come
 to you if you do.&quot;
@@ -558,7 +586,7 @@ to you if you do.&quot;
 &quot;...What?&quot; He&#39;s less angry, more confused. He walks out scratching his head,
 either because he&#39;s questioning the complete nonsense you just made up, or
 due to the large welt on his head.
-[[Proceed with Story|Friend Encounter]]</tw-passagedata><tw-passagedata pid="49" name="Incorrect 2" tags="" position="1100,600" size="100,100">He stares at you as if you just grew a third eye.
+[[Proceed with Story|Friend Encounter]]</tw-passagedata><tw-passagedata pid="52" name="Incorrect 2" tags="" position="225,725" size="100,100">He stares at you as if you just grew a third eye.
 
 &quot;What the hell did you just say to me!?&quot;
 
