Compiled current progress.

--- a/output/story.html
+++ b/output/story.html
@@ -162,7 +162,16 @@ As he approaches the counter, you realize he looks familiar.
     [[&quot;yeW sEEm famIliAr...&quot; says the drunken man slurring his words and clearly looking at you|Customer 2 Encounter]]
 &lt;&lt;elseif $anger == false&gt;&gt;
     [[&quot;I KnOW yEW!&quot; shouts the drunken man slurring his words and clearly looking at you|Customer 2 Angry]]
-&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="3" name="Customer 2 Encounter" tags="" position="350,100" size="100,100">You realize its the angry man who went to the shop earlier today!</tw-passagedata><tw-passagedata pid="4" name="Customer 2 Angry" tags="" position="475,100" size="100,100">&quot;yOUR ThAT foRTUnE SHittER&quot; he slurs out.
+&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="3" name="Customer 2 Encounter" tags="" position="350,100" size="100,100">You realize its the angry man who went to the shop earlier today!
+&quot;riGHT, YouRe ThaT forTUnE telLER.&quot; the man says groggily.
+You and $friendFirstName stare at him silently unsure what to do.
+&quot;YeW wERe RIght abOut ThAT forTUNey sTUfF oR WhATevER...&quot; he leans in for a hug.
+You realize the man is trying to thank you.
+&quot;Yeah...you&#39;re welcome?&quot; this is a bit too much.
+You and $friendFirstName exchange looks.
+&quot;Well it was nice seeing you but I have somewhere to be.&quot; you say gently pushing the man off of you.
+&quot;anY-AnyTiIIme&quot; the man says slumping on the counter.
+While glad you managed to somewhat help this man, you and $friendFirstName decide it&#39;s best to hangout [[somewhere else.|Park]]</tw-passagedata><tw-passagedata pid="4" name="Customer 2 Angry" tags="" position="475,100" size="100,100">&quot;yOUR ThAT foRTUnE SHittER&quot; he slurs out.
 &quot;What did you just say!?&quot; $friendFirstName says, suddenly standing up.
 You try to diffuse the situation &quot;Just let it go-&quot; $friendFirstName cuts you off.
 &quot;I&#39;m not going to let some balding old man insult you like that!&quot; $friendFirstName seems pissed.
@@ -174,12 +183,12 @@ Although it seems he didn&#39;t have to say that twice because once you turned b
 Without thinking you run outside to help you friend.
 It appeared $friendFirstName had bit off more than they could chew because they were clearly losing.
 [[Join the fight|Join Fight]]
-&lt;&lt;if $knife == true&gt;&gt;
-    [[Use Pocket Knife|Pocket Knife]]
-&lt;&lt;/if&gt;&gt;
-&lt;&lt;if $gift == true&gt;&gt;
-    [[Use Gift|Gift Fight]]
-&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="5" name="Join Fight" tags="" position="600,100" size="100,100">You step into the alley where the man and $friendFirstName are fighting it out.
+&lt;&lt;if $knife == true&gt;&gt;\
+    [[Use Pocket Knife|Pocket Knife]]\
+&lt;&lt;/if&gt;&gt;\
+&lt;&lt;if $gift == true&gt;&gt;\
+    [[Use Gift|Gift Fight]]\
+&lt;&lt;/if&gt;&gt;\</tw-passagedata><tw-passagedata pid="5" name="Join Fight" tags="" position="600,100" size="100,100">You step into the alley where the man and $friendFirstName are fighting it out.
 You land a punch cleanly on the man&#39;s face, he seems to lose his balance.
 Right as you punched the man, out of the corner of your eye you notice $friendFirstName collapse to the floor.
 You quickly try to help $friendFirstName but it appears you are already too late.
