reducing file size

--- a/output/story.html
+++ b/output/story.html
@@ -1424,10 +1424,10 @@ You decide to grab the gift, who knows it might come in handy later.
 You decide to grab the pocket knife, who knows it might come in handy later.
 [[Next|Heading Out]]</tw-passagedata><tw-passagedata pid="114" name="Heading Out" tags="" position="475,1475" size="100,100">&lt;&lt;if $pet == &quot;dog&quot;&gt;&gt;
 	As you are heading out Luma approaches you clearly [[expecting something|Dog Pat]]
-	&lt;img src=&quot;media/dogStare.gif&quot; alt=&quot;dog stare&quot; style=&quot;width: 30%;&quot;&gt;
+	&lt;img src=&quot;media/dogStare.jpg&quot; alt=&quot;dog stare&quot; style=&quot;width: 30%;&quot;&gt;
 &lt;&lt;elseif $pet == &quot;cat&quot;&gt;&gt;
 As you are heading out Luma approaches you clearly [[expecting something|Cat Pat]]
-	&lt;img src=&quot;media/catStare.gif&quot; alt=&quot;cat stare&quot; style=&quot;width: 30%;&quot;&gt;
+	&lt;img src=&quot;media/catStare.jpg&quot; alt=&quot;cat stare&quot; style=&quot;width: 30%;&quot;&gt;
 &lt;&lt;/if&gt;&gt;
 After tidying up a bit, you grab a coat and head to the door.
 $friendFirstName is leaning next to your door waiting for you outside.
